add: Logo title and image

--- a/index.html
+++ b/index.html
@@ -4,8 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Esercizio CSS</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
-    
+    <!-- Logo e pattern -->
+    <header class="intestazione">
+        <div class="logo">
+            <img src="./img/logo.svg" alt="">
+        </div>
+    </header>
+
+    <main>
+        <main>
+            <!-- Titolo e data -->
+            <section>
+                <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+                <div class="title-footer">Scritto da <span class="mark">The Booleaner</span></div>
+                <div class="title-footer">il 10/10/2020</div>
+            </section>
+            <!-- immagini e descrizione-->
+            <section>
+                <div>
+                    <img src="./img/tim-1.jpg" alt="">
+                    <img src="./img/tim-2.jpg" alt="">
+                </div>
+                <div>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</div>
+                <div>2nd Photo: Wikimedia, by Paul Clarke</div>
+            </section>
+        </main>
+    </main>
 </body>
 </html>
