add: paragraph and ul list

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     </header>
 
     <main>
-        <main>
             <!-- Titolo e data -->
             <section>
                 <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
@@ -24,15 +23,28 @@
                 <div class="title-footer">il 10/10/2020</div>
             </section>
             <!-- immagini e descrizione-->
+            <div>
+                <img src="./img/tim-1.jpg" alt="">
+                <img src="./img/tim-2.jpg" alt="">
+            </div>
+            <div>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</div>
+            <div>2nd Photo: Wikimedia, by Paul Clarke</div>
+            <!-- Paragrafo e lista ul -->
+            <div>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud <span class="highlighted">exerci tation ullamcorper suscipit lobortis nisi ut aliquip ex ea commodo consequat.</span> Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+                <!-- Lista ul     -->
+                <ul>
+                    <li>Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</li>
+                    <li>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nis ut aliquip ex ea commodo consequat.</li>
+                    <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</li>
+                </ul>
+            </div>
+            <!-- Tabella -->
             <section>
-                <div>
-                    <img src="./img/tim-1.jpg" alt="">
-                    <img src="./img/tim-2.jpg" alt="">
-                </div>
-                <div>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</div>
-                <div>2nd Photo: Wikimedia, by Paul Clarke</div>
+                <table>
+
+                </table>
             </section>
         </main>
-    </main>
 </body>
 </html>
