--- a/index.html
+++ b/index.html
@@ -72,6 +72,14 @@
             <div>
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nis ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, <span class="highlighted">vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et justo</span> odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
             </div>
+            <!-- Immagini fine articolo -->
+            <footer>
+                    <h4>Potrebbero interessarti</h4>
+                    <div class="text1">Lorem ipsum dolor</div>
+                    <img src="./img/monitor.jpg" alt="">
+                    <div class="text1">Lorem ipsum dolor</div>
+                    <img src="./img/graph.jpg" alt="">        
+            </footer>
         </main>
 </body>
 </html>
