--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Logo e pattern -->
     <header class="intestazione">
         <div class="logo">
-            <img src="./img/logo.svg" alt="">
+            <img src="./img/logo.svg" alt="logo">
         </div>
     </header>
 
@@ -24,8 +24,8 @@
             </section>
             <!-- immagini e descrizione-->
             <div>
-                <img src="./img/tim-1.jpg" alt="">
-                <img src="./img/tim-2.jpg" alt="">
+                <img src="./img/tim-1.jpg" alt="foto 1 di Tim">
+                <img src="./img/tim-2.jpg" alt="foto 2 di Tim">
             </div>
             <div>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</div>
             <div>2nd Photo: Wikimedia, by Paul Clarke</div>
@@ -51,9 +51,9 @@
                     </thead>
                     <tbody>
                         <tr class="line">
-                            <td>Lorem ipsum dolor</td>
-                            <td>Lorem ipsum dolor</td>
-                            <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eos quo, placeat consectetur ullam fugiat similique perferendis repellendus illo mollitia eveniet expedita a quia modi. Totam saepe quibusdam natus harum.</td>
+                            <td class="t1">Lorem ipsum dolor</td>
+                            <td class="t2">Lorem ipsum dolor</td>
+                            <td class="t3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eos quo, placeat consectetur ullam fugiat similique perferendis repellendus illo mollitia eveniet expedita a quia modi. Totam saepe quibusdam natus harum.</td>
                         </tr>
                         <tr>
                             <td>Lorem ipsum dolor</td>
@@ -76,9 +76,8 @@
             <footer>
                     <h4>Potrebbero interessarti</h4>
                     <div class="text1">Lorem ipsum dolor</div>
-                    <img src="./img/monitor.jpg" alt="">
-                    <div class="text1">Lorem ipsum dolor</div>
-                    <img src="./img/graph.jpg" alt="">        
+                    <br>
+                    <div class="text2">Lorem ipsum dolor</div>        
             </footer>
         </main>
 </body>
